--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -29,9 +29,11 @@
 							<div class="col-12 col-sm-6 col-lg-2">
 								<app-number label="Opname" step="0.01" placeholder="0.00" formControlName="withdrawal"></app-number>
 							</div>
+
 							<div class="col-12 mt-1">
 								<app-text label="Note" formControlName="note" placeholder="Short summary" [maxLength]="250"></app-text>
 							</div>
+
 							<div class="col-9"></div>
 							<div class="col-12 col-sm-3">
 								<button (click)="onSubmit()" class="btn btn-outline-primary w-100 mt-2">Save</button>
@@ -55,7 +57,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr *ngFor="let record of ls.getRecordsByUserId(ls.getUserId())">
+					<tr *ngFor="let record of ls.getRecordsByUserId(ls.getUserId()).slice(0, maxShownRecords);">
 						<td>{{ record.date | date:"dd-MM" }}</td>
 						<td>{{ ls.getCasinoName(record.casinoId) }}</td>
 						<td>{{ ls.getTypeName(record.recordTypeId) }}</td>
@@ -75,6 +77,8 @@
 								(click)="deleteRecord(record.id ?? '')"></fa-icon>
 						</td>
 					</tr>
+					<button *ngIf="ls.getRecordsByUserId(ls.getUserId()).length > maxShownRecords" (click)="maxShownRecords = ls.getRecordsByUserId(ls.getUserId()).length"
+						class="btn btn-light w-100 mt-2 fw-bold">Meer</button>
 				</tbody>
 			</table>
 		</div>
