--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -2,11 +2,11 @@
     <div class="row">
         <div class="col-12 col-lg-3">
             <!-- Toggle between creating record and week summary -->
-            <button type="button" class="btn btn-light mb-3 fw-bold w-100" (click)="showCreateRecord = true"
+            <!-- <button type="button" class="btn btn-light mb-3 fw-bold w-100" (click)="showCreateRecord = true"
                 *ngIf="!showCreateRecord"><fa-icon [icon]="faPlus"></fa-icon> Record aanmaken
-            </button>
+            </button> -->
         </div>
-        <div class="col-12 col-lg-9">
+        <div class="col-12">
             <div *ngIf="!showCreateRecord && createdRecord" class="alert alert-success text-center p-2 fw-bold"
                 role="alert">
                 Record aangemaakt!
