--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -52,10 +52,10 @@
                 <div class="row">
                     <div class="col-12 col-lg-3 d-none d-lg-block">
                         <!-- Hide create record -->
-                        <button type="button" class="btn btn-secondary w-100 mt-3 fw-bold"
+                        <!-- <button type="button" class="btn btn-secondary w-100 mt-3 fw-bold"
                             (click)="showCreateRecord = false">
                             <fa-icon [icon]="faTimes"></fa-icon> Annuleren
-                        </button>
+                        </button> -->
                     </div>
                     <div class="col-12 col-lg-3">
                         <button (click)="onSubmit()" class="btn btn-light w-100 mt-3 fw-bold">Record opslaan</button>
